MFC r319942 (jhb):

Don't try to assign interrupts to a CPU on single-CPU systems.

 All interrupts are routed to the sole CPU in that case implicitly.
 This is a regression in EARLY_AP_STARTUP.  Previously the 'assign_cpu'
 variable was only set when a multi-CPU system finished booting, so
 its value both meant that interrupts could be assigned and that
 there was more than one CPU.

PR:		219882
Approved by:	re (kib)
Sponsored by:	The FreeBSD Foundation

Former-commit-id: 637b8a90b47d7b28eebf990982111083daf9c6fe